--- a/idldoc/src/templates/docbook-profile.tt
+++ b/idldoc/src/templates/docbook-profile.tt
@@ -104,18 +104,68 @@
 	<sect2><title>Routine details</title>
 	
 	  [% FOREACH r IN visible_routines %][% SCOPE r %]
-	  <para><code>[% IF is_function %]<emphasis>result</emphasis> = [% END %][% name %][% IF is_function %]([% END %][% IF n_visible_parameters gt 0 %][% FOREACH p IN visible_parameters %][% SCOPE p %]<emphasis>[% IF is_optional %] [[% END %][% prefix %][% name %][% suffix %][% IF is_optional %]][% END %]</emphasis>[% END %][% END %][% END %][% IF n_visible_keywords gt 0 %][% FOREACH k IN visible_keywords %][% SCOPE k %]<emphasis>[% IF is_optional %] [[% END %][% prefix %][% IF is_boolean %]/[% END %][% name %][% IF ~is_boolean %]=<emphasis>[% IF type ne '' %][% type %][% ELSE %][% name %][% END %]</emphasis>[% END %][% suffix %][% IF is_optional %]][% END %]</emphasis>[% END %][% END %][% END %][% IF is_function %])[% END %]</code></para>
-
-      [% IF has_comments %]
-        [% comments %]
-      [% END %]
+	  <sect3><title><function>[% name %]</function></title>
+	  
+	    <variablelist>
+	      <varlistentry>
+  	      <term>
+    	      <code>[% IF is_function %]<emphasis>result</emphasis> = [% END %][% name %][% IF is_function %]([% END %][% IF n_visible_parameters gt 0 %][% FOREACH p IN visible_parameters %][% SCOPE p %]<emphasis>[% IF is_optional %] [[% END %][% prefix %][% name %][% suffix %][% IF is_optional %]][% END %]</emphasis>[% END %][% END %][% END %][% IF n_visible_keywords gt 0 %][% FOREACH k IN visible_keywords %][% SCOPE k %]<emphasis>[% IF is_optional %] [[% END %][% prefix %][% IF is_boolean %]/[% END %][% name %][% IF ~is_boolean %]=<emphasis>[% IF type ne '' %][% type %][% ELSE %][% name %][% END %]</emphasis>[% END %][% suffix %][% IF is_optional %]][% END %]</emphasis>[% END %][% END %][% END %][% IF is_function %])[% END %]</code>
+    	    </term>
+          <listitem>
+            [% IF has_comments %][% comments %][% END %]
+          </listitem>
+        </varlistentry>
+      </variablelist>
           
       [% IF is_function and has_returns %]
-      <sect3><title>Return value</title>
-      	[% returns %]
-      </sect3>
+      <sect4><title>Return value</title>
+        <variablelist>
+          <varlistentry>
+            <term>[% returns %]</term>
+        	  <listitem></listitem>
+      	  </varlistentry>
+    	  </variablelist>    	  
+      </sect4>
       [% END %]
-	  [% END %][% END %]
+      
+      [% IF n_parameters gt 0 %]
+      <sect4><title>Parameters</title>
+        <variablelist>
+          [% FOREACH p IN parameters %][% SCOPE p %]
+          <varlistentry>
+            <term><varname>[% name %]</varname> &mdash; <code>[% IF is_input %]in [% END %][% IF is_output %]out [% END %][% IF is_optional %]optional [% END %][% IF is_required %]required [% END %][% IF is_private %]private [% END %][% IF is_hidden %]hidden [% END %][% IF is_obsolete %]obsolete [% END %][% IF type ne '' %]type=[% type %] [% END %][% IF default_value ne '' %]default=[% default_value %][% END %]</code></term>
+            <listitem>[% comments %]</listitem>
+          </varlistentry>
+          [% END %][% END %]
+        </variablelist>
+      </sect4>
+      [% END %]
+      
+      [% IF n_keywords gt 0 %]
+      <sect4><title>Keywords</title>
+        <variablelist>
+          [% FOREACH k IN keywords %][% SCOPE k %]
+          <varlistentry>
+          <term><varname role="keyword">[% name %]</varname> &mdash; <code>[% IF is_input %]in [% END %][% IF is_output %]out [% END %][% IF is_optional %]optional [% END %][% IF is_required %]required [% END %][% IF is_private %]private [% END %][% IF is_hidden %]hidden [% END %][% IF is_obsolete %]obsolete [% END %][% IF type ne '' %]type=[% type %] [% END %][% IF default_value ne '' %]default=[% default_value %][% END %]</code></term>
+            <listitem>[% comments %]</listitem>
+          </varlistentry>
+          [% END %][% END %]
+        </variablelist>
+      </sect4>
+      [% END %]
+          
+      [% IF has_examples %]
+      <variablelist>
+        <varlistentry>
+          <term>Examples</term>
+          <listitem>[% examples %]</listitem>
+        </varlistentry>
+      </variablelist>
+      [% END %]      
+            
+	  </sect3>        
+  	[% END %][% END %]
+
   </sect2>
   [% END %]
   
