Changed examples section of DocBook profile template.

--- a/idldoc/src/templates/docbook-profile.tt
+++ b/idldoc/src/templates/docbook-profile.tt
@@ -155,12 +155,11 @@
       [% END %]
           
       [% IF has_examples %]
-      <variablelist>
-        <varlistentry>
-          <term>Examples</term>
+      <sect4><title>Examples</title>      
+        <itemizedlist>
           <listitem>[% examples %]</listitem>
-        </varlistentry>
-      </variablelist>
+        </itemizedlist>
+      </sect4>
       [% END %]      
             
 	  </sect3>        
