Getting very basic LaTeX output.

--- a/idldoc/src/templates/latex-index.tt
+++ b/idldoc/src/templates/latex-index.tt
@@ -1,6 +1,7 @@
 \documentclass{book}
 
 \title{[% title %]}
+\author{[% subtitle %]}
 \date{[% date %]}
 
 \begin{document}
@@ -8,7 +9,20 @@
 \maketitle
 
 \include{overview}
-\include{all-dirs}
+
+\part{API}
+                   
+[% FOREACH d IN dirs %][% SCOPE d %]
+\chapter*{Directory: [% mg_escape_latex(fullname) %]}
+
+[% IF n_visible_pro_files gt 0 %]
+[% FOREACH f IN visible_pro_files %][% SCOPE f %]
+\section*{[% mg_escape_latex(basename) %]}
+\input{[% output_path %]}
+[% END %][% END %]
+[% END %]
+
+[% END %][% END %]
 
 \include{idldoc-warnings}
 
