Adding IDLdoc LaTeX class and style, copying them when creating LaTeX output.

--- a/idldoc/src/templates/latex-index.tt
+++ b/idldoc/src/templates/latex-index.tt
@@ -1,4 +1,4 @@
-\documentclass{book}
+\documentclass[nols]{idldoc}
 
 \title{[% title %]}
 \author{[% subtitle %]}
@@ -10,6 +10,8 @@
 \begin{document}
 
 \maketitle
+
+\tableofcontents
 
 \include{overview}
 
