Using listings package for routine syntax.

--- a/idldoc/src/templates/latex-index.tt
+++ b/idldoc/src/templates/latex-index.tt
@@ -5,6 +5,8 @@
 \date{[% date %]}
 
 \usepackage{helvet}
+\usepackage{listings}
+\lstset{breaklines=true,basicstyle=\ttfamily}
 
 
 \begin{document}
