--- a/idldoc/src/templates/latex-index.tt
+++ b/idldoc/src/templates/latex-index.tt
@@ -8,6 +8,9 @@
 \usepackage{listings}
 \lstset{breaklines=true,basicstyle=\ttfamily}
 
+\usepackage{graphicx}
+\setkeys{Gin}{width=\linewidth,totalheight=\textheight,keepaspectratio}
+
 
 \begin{document}
 
