--- a/idldoc/src/templates/latex-profile.tt
+++ b/idldoc/src/templates/latex-profile.tt
@@ -162,9 +162,9 @@ item[Requires]\hspace*{1em} \newline [% requires %]
 \vspace{1.1em}
 [% END %]
 
-\begin{fullwidth}
+\begin{syntaxheader}
 \lstinline+[% IF is_function %]result = [% END %][% name %][% IF is_function %]([% END %][% IF n_visible_parameters gt 0 %][% FOREACH p IN visible_parameters %][% SCOPE p %][% IF is_optional %] [[% END %][% prefix %][% name %][% suffix %][% IF is_optional %]][% END %][% END %][% END %][% END %][% IF n_visible_keywords gt 0 %][% FOREACH k IN visible_keywords %][% SCOPE k %][% IF is_optional %] [[% END %][% prefix %][% IF is_boolean %]/[% END %][% name %][% IF ~is_boolean %]=[% IF type ne '' %][% type %][% ELSE %][% name %][% END %][% END %][% suffix %][% IF is_optional %]][% END %][% END %][% END %][% END %][% IF is_function %])[% END %]+
-\end{fullwidth}
+\end{syntaxheader}
 
 [% IF is_function and has_returns %]
 \begin{description}
@@ -267,6 +267,7 @@ item[Requires]\hspace*{1em} \newline [% requires %]
 
 [% END %][% END %]
 
+[% IF statistics %]
 \begin{description}
 \item[File attributes]\hspace*{1em} \newline
   	
@@ -279,6 +280,7 @@ item[Requires]\hspace*{1em} \newline [% requires %]
 \end{description}
 
 \end{description}
+[% END %]
 
 [% END %]
 
