Removed graphicx package options that made images take up the entire environment.

--- a/idldoc/src/templates/latex-index.tt
+++ b/idldoc/src/templates/latex-index.tt
@@ -8,8 +8,8 @@
 \usepackage{listings}
 \lstset{breaklines=true,basicstyle=\ttfamily}
 
-\usepackage{graphicx}
-\setkeys{Gin}{width=\linewidth,totalheight=\textheight,keepaspectratio}
+\usepackage[pdftex]{graphicx}
+\setkeys{Gin}{keepaspectratio}
 
 
 \begin{document}
