--- a/idldoc/src/templates/all-files.tt
+++ b/idldoc/src/templates/all-files.tt
@@ -34,7 +34,16 @@
     		[% END %]
     	</ul>
     [% END %]
-    
+
+    [% IF n_dlm_files gt 0 %]
+    <h1>.dlm files &nbsp;&nbsp; <span>[% n_dlm_files %] files</span></h1>
+      <ul>
+        [% FOREACH f IN dlm_files %]
+          <li>[% SCOPE f %]<a href="[% location %][% local_url %]" target="main_frame">[% basename %]</a>[% END %]</li>
+        [% END %]
+      </ul>    
+    [% END %]
+        
     [% IF n_sav_files gt 0 %]
     <h1>.sav files &nbsp;&nbsp; <span>[% n_sav_files %] files</span></h1>
       <ul>
