--- a/idldoc/src/resources/main.css
+++ b/idldoc/src/resources/main.css
@@ -30,7 +30,7 @@ span.file_attribute { float: right; color: #384806; margin: 0 0 1em 3em; }
 div#file_comments { margin-top: 1em; }
 
 div.routine-details { border: 1px dotted #C0C0C0; margin-top: 1em; padding: 1em; }
-div.routine-details span.routine-attributes { font-size: 70%; margin-left: 3em; color: #384806; }
+span.routine-attributes { font-size: 70%; margin-left: 3em; color: #384806; }
 div.details dt { color: #900000; margin-left: 2em; }
 div.details dt span { color: #384806; margin-left: 2em; }
 div.details dd { margin: 0.5em 2em 1em 4em; }
