--- a/idldoc/src/templates/latex-profile.tt
+++ b/idldoc/src/templates/latex-profile.tt
@@ -17,7 +17,7 @@
 [% END %]
 
 
-[% IF has_class && (n_children gt 0 || n_properties gt 0 || ~user) %][% FOREACH class IN classes %][% SCOPE class %]
+[% IF has_class %][% FOREACH class IN classes %][% SCOPE class %]
 \subsection*{Class description for [% mg_escape_latex(classname) %]}
       
 [% IF n_ancestors gt 0 %]
@@ -63,7 +63,7 @@
 
 \begin{description}
 [% FOREACH p IN properties %][% SCOPE p %]
-\item[[% mg_escape_latex(name) %]] \hspace*{1em} {\small\smallcaps{[% IF is_get %]get [% END %][% IF is_set %]set [% END %][% IF is_init %]init [% END %]}} \newline [% comments %]
+\item[[% mg_escape_latex(name) %]] \hspace*{1em} {\small\smallcaps{[% IF is_get %]get [% END %][% IF is_set %]set [% END %][% IF is_init %]init [% END %]}[% IF has_type %]type=[% type %][% END %]} \newline [% comments %]
 [% END %][% END %]
 \end{description} 
    
