--- a/idldoc/src/templates/latex-savefile.tt
+++ b/idldoc/src/templates/latex-savefile.tt
@@ -3,9 +3,9 @@
 \begin{description}
   \item[SAV file attributes]\hspace*{1em} \newline
 	  \begin{tabular}{lr}
-	    Description & [% description %] \\
+	    Description & [% mg_escape_latex(description) %] \\
 	    SAV file type & [% filetype %] \\
-	    Creator & [% user %]@[% host %] on [% os %]/[% arch %] \\
+	    Creator & [% mg_escape_latex(user) %]@[% mg_escape_latex(host) %] on [% os %]/[% mg_escape_latex(arch) %] \\
 	    Creation date & [% creation_date %] \\
 	    IDL version & [% release %]	\\
 	  \end{tabular}
